--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
-<h1>Vice View</h1>
-<form>
-	<textarea cols="50" row="10" name="usertext"></textarea>
+<h1>Vice Verce</h1>
+<form action="{% url 'revers' %}">
+	<textarea cols="50" rows="10" name="usertext"></textarea>
 	<br><br>
 	<input type="submit" value="Reverse!">
 </form>
